post ATQ gitignored

--- a/ngproj/src/app/app.component.css
+++ b/ngproj/src/app/app.component.css
@@ -1,3 +1,13 @@
 .clicked{
     color: red;
 }
+
+>>> p{
+    text-align: center;
+    color: blue;
+}
+
+a.active{
+    color: red;
+    font-weight: bold;
+}
