--- a/ngproj/src/app/employee_component/emp_comp.component.html
+++ b/ngproj/src/app/employee_component/emp_comp.component.html
@@ -1,3 +1,23 @@
 <input type="text" placeholder="{{placeval}}" (input) = 'inputval($event.target.value)'>
 
 <p *ngIf='inputvalhere.length'>Text entered : {{inputvalhere}}</p>
+
+<ol *ngIf='employees && employees.length'>
+    <li *ngFor="let emp of employees">
+        <a routerLink="{{emp.id}}">{{emp.name}}</a>
+    </li>
+</ol>
+
+<div>
+    <h2>{{title}}</h2>
+    <table border="1">
+      <tr *ngFor="let employee of employees">
+        <td>{{ employee.name }}</td>
+        <td><button (click)='editEmployee(employee.id, employee.name)'>Edit</button></td>
+        <td><button (click)='deleteEmployee(employee.id)'>Delete</button></td>
+      </tr>
+    </table>
+    <br>
+    <button (click)='addEmployee()'>Add</button>
+  </div>
+  
